// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState should render empty state component styles of type error 1`] = `
<div
  className="css-agajyl"
  direction="row"
  width="100%"
>
  <p
    className="css-v9tx79"
    fontFamily="IBM Plex Sans"
  >
    An error has occured
  </p>
</div>
`;

exports[`EmptyState should render empty state component styles of type loading 1`] = `
<div
  className="css-agajyl"
  direction="row"
  width="100%"
>
  <p
    className="css-v9tx79"
    fontFamily="IBM Plex Sans"
  >
    loading...
  </p>
</div>
`;
